--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
             window.AudioContext = window.AudioContext||window.webkitAudioContext;
             const context = new AudioContext();
             const pre = "https://audio-1256378396.cos.ap-guangzhou.myqcloud.com/"
-
-            const query_list = 'https://06mdkod2.qcloud.la/weapp/queryList'
-            const publish_audio = 'https://06mdkod2.qcloud.la/weapp/publishAudio'
-            const update_publish = 'https://06mdkod2.qcloud.la/weapp/updatePublish'
-            const query_audio = 'https://06mdkod2.qcloud.la/weapp/queryAudio'
-            const save_paper = 'https://06mdkod2.qcloud.la/weapp/savePaper'
-            const update_paper = 'https://06mdkod2.qcloud.la/weapp/updatePaper'
-            const save_question = 'https://06mdkod2.qcloud.la/weapp/saveQuestion'
-            const query_paper = 'https://06mdkod2.qcloud.la/weapp/queryPaper'
-            const query_question = 'https://06mdkod2.qcloud.la/weapp/queryQuestion'
-            const black_login = 'https://06mdkod2.qcloud.la/weapp/blackLogin'
+            
+            const query_list = 'https://418980938.omoz.club/weapp/queryList'
+            const publish_audio = 'https://418980938.omoz.club/weapp/publishAudio'
+            const update_publish = 'https://418980938.omoz.club/weapp/updatePublish'
+            const query_audio = 'https://418980938.omoz.club/weapp/queryAudio'
+            const save_paper = 'https://418980938.omoz.club/weapp/savePaper'
+            const update_paper = 'https://418980938.omoz.club/weapp/updatePaper'
+            const save_question = 'https://418980938.omoz.club/weapp/saveQuestion'
+            const query_paper = 'https://418980938.omoz.club/weapp/queryPaper'
+            const query_question = 'https://418980938.omoz.club/weapp/queryQuestion'
+            const black_login = 'https://418980938.omoz.club/weapp/blackLogin'
 
             var key_size = {}
             var file_ids = new Array();
